updated TRC features

--- a/tricity-royals-client/index.html
+++ b/tricity-royals-client/index.html
@@ -1,10 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/trc_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tricity Royals Club</title>
+    <meta
+      name="description"
+      content="Tricity Royals Club unites Waterloo’s diverse community through cricket, volleyball, badminton, pickleball, tournaments and service."
+    />
+    <meta
+      name="keywords"
+      content="Tricity Royals, sports club, cricket Waterloo, volleyball club, community events, Waterloo region"
+    />
+    <meta name="author" content="Tricity Royals Club" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Tricity Royals Club" />
+    <meta
+      property="og:description"
+      content="Join sports tournaments and build community through Tricity Royals Club in Waterloo."
+    />
+    <meta property="og:image" content="/trc_logo_large.png" />
+    <meta property="og:url" content="https://tricityroyalsclub.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tricity Royals Club" />
+    <meta
+      name="twitter:description"
+      content="Cricket, Volleyball, Community Service – All in one place!"
+    />
+    <meta name="twitter:image" content="/trc_logo_large.png" />
+
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
